# employee-example

./: .gitignore  CMakeLists.txt  EmployeeTest.cpp  Makefile  MyTest.cpp  PartTimeEmployee.h  README
includes/: Employee.h
src/: EmployeeTest.cpp  PartTimeEmployee.cpp
